# tessera

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE.commercial  NOTICE  README.md  README.ru.md  clippy.toml  deny.toml  rust-toolchain.toml
crates/pam_tessera/: Cargo.toml
crates/pam_tessera/src/: data_handle.rs  di.rs  entry.rs  flow.rs  lib.rs  logging.rs  pam_args.rs  pam_conv.rs  pam_helpers.rs  panic_guard.rs  role_selection.rs  session.rs  xdg_capture.rs
crates/pam_tessera/tests/: auth_e2e_p12.rs  hook_smoke.rs  mac_open_session.rs  negative_auth.rs  pam_smoke.rs
crates/pam_tessera/tests/common/: mod.rs
crates/tessera_cli/: Cargo.toml
crates/tessera_cli/src/: actions.rs  check.rs  dump_host_id.rs  enroll.rs  fly_dm_wallpaper_writer.rs  lib.rs  logging.rs  logind.rs  main.rs  notify.rs  peercred.rs  registry.rs  role.rs  server.rs  shutdown.rs  startup_check.rs  state.rs  tags.rs  testing.rs  udev_monitor.rs  udev_query.rs
crates/tessera_cli/src/daemon/: mod.rs  singleton.rs  stale_mounts.rs
crates/tessera_cli/src/logind/: actions.rs  listener.rs
crates/tessera_cli/src/registry/: store.rs
crates/tessera_cli/src/startup_check/: host_identity.rs  mac_runtime.rs  mrd.rs  pam_stack.rs  parsec_caps.rs  trust.rs
crates/tessera_cli/tests/: cli_smoke.rs  dispatch.rs  handshake.rs  ipc_active_session.rs  ipc_auth.rs  ipc_roundtrip.rs  logind_persist.rs  mac_sessions_file.rs  mac_socket_label.rs  notify.rs  peercred.rs  registry.rs  registry_store.rs  server_handlers.rs  server_hardening.rs  session_open_persist.rs  session_ttl.rs  startup_check.rs  suspend_grace.rs  suspend_state.rs  udev_event_parse.rs  udev_simulation.rs  update_session_target.rs
crates/tessera_core/: Cargo.toml  build.rs
crates/tessera_core/src/: discovery.rs  error.rs  host_binding.rs  lib.rs  logging.rs  mapping.rs  mount_guard.rs  pam_conv.rs  pam_data.rs  privileged_path.rs  secret.rs  self_check.rs
crates/tessera_core/src/challenge/: ecdsa.rs  error.rs  gost.rs  mod.rs  rsa_pss.rs
crates/tessera_core/src/config/: mod.rs  raw.rs  validated.rs
crates/tessera_core/src/crl/: mod.rs  store.rs
crates/tessera_core/src/enrollment/: audit.rs  import.rs  import_tests.rs  mod.rs
crates/tessera_core/src/gost/: algorithms.rs  engine.rs  errors.rs  mod.rs  sys.rs
crates/tessera_core/src/hooks/: child_setup.rs  env.rs  executor.rs  fork_exec.rs  mod.rs  pipe_reader.rs  placeholder.rs  result.rs  rlimit.rs  runner.rs  stage.rs  user.rs  validator.rs  vars.rs  wait.rs
crates/tessera_core/src/host_identity/: chain.rs  custom_command.rs  dmi.rs  hostname.rs  machine_id.rs  mod.rs  source.rs
crates/tessera_core/src/ipc/: client.rs  failmode.rs  mod.rs
crates/tessera_core/src/mac/: audit.rs  backend.rs  label.rs  mod.rs  orchestrator.rs
crates/tessera_core/src/mount/: mod.rs  usb.rs
crates/tessera_core/src/ocsp/: cache.rs  http.rs  mod.rs  request.rs  response.rs  sys.rs
crates/tessera_core/src/pkcs12/: error.rs  mod.rs
crates/tessera_core/src/plugin/: audit.rs  header.rs  loader.rs  mod.rs  verify.rs
crates/tessera_core/src/role/: audit.rs  manifest.rs  mod.rs  schema.rs  selection.rs  store.rs  update.rs
crates/tessera_core/src/tags/: audit.rs  mod.rs  schema.rs  source.rs
crates/tessera_core/src/token/: mod.rs
crates/tessera_core/src/trust/: delegation.rs  delegation_audit.rs  mod.rs  openssl_verifier.rs  stub.rs  types.rs
crates/tessera_core/src/usb/: error.rs  linux_impl.rs  mod.rs  partition.rs
crates/tessera_core/src/x509/: allowed_roles_ext.rs  basic_constraints.rs  chain.rs  chain_policy.rs  delegation_constraints_ext.rs  der.rs  der_helpers.rs  error.rs  ext.rs  host_binding_ext.rs  key_strength.rs  max_integrity_ext.rs  mod.rs  oids.rs  pinning.rs  pre_validate.rs  profile_validation.rs  profile_version_ext.rs  sig_alg.rs  signatures.rs  test_utils.rs  user_binding_ext.rs
crates/tessera_core/tests/: allowed_roles_ext_parse.rs  cert_extensions_parse.rs  chain_build.rs  chain_policy.rs  chain_verify.rs  challenge_dispatch.rs  challenge_ecdsa.rs  challenge_rsa.rs  config_pkcs11.rs  config_roundtrip.rs  crl.rs  delegation_constraints_ext_parse.rs  delegation_enforce.rs  dist_examples_parse.rs  enrollment_integration.rs  gost_chain_verify.rs  gost_chain_verify_real.rs  gost_challenge_real.rs  gost_crl_real.rs  gost_crl_verify.rs  gost_engine_ffi.rs  hook_executor_integration.rs  hook_security_integration.rs  host_identity_props.rs  intermediate_constraints.rs  ipc_client.rs  ipc_failmode.rs  issuer_contract.rs  mac_audit_events.rs  mac_audit_rate_limit.rs  mac_backend_matrix.rs  mac_ext_parse.rs  mac_feature_flags.rs  mac_label_intersect.rs  mac_label_roundtrip.rs  mac_orchestrator.rs  mac_policy_config.rs  mac_stub_fail_fast.rs  mount_guard_tmpfs.rs  mount_usb.rs  (+21 more)
crates/tessera_core/tests/common/: mod.rs
crates/tessera_core/tests/fixtures/: ca.key  ca.pem  ca_site.key  ca_site.pem  crl_foreign.pem  crl_valid.pem  expired_leaf.p12  expired_leaf.pem  full_valid.toml  gen.sh  gen_gost.sh  gen_ocsp.sh  int.key  (+15 more)
crates/tessera_ext/: Cargo.toml
crates/tessera_ext/src/: delegation.rs  der.rs  ext.rs  lib.rs
crates/tessera_issuer/: Cargo.toml
crates/tessera_issuer/examples/: README.md  com.tesseralabs.issuer-serve.plist  issuer-serve-task.xml  issuer-serve.service
crates/tessera_issuer/src/: cli.rs  confirm.rs  crl.rs  csr.rs  error.rs  file.rs  journal.rs  l10n.rs  lib.rs  monotonicity.rs  pkcs11.rs  profile.rs  serial.rs  serve.rs  sign.rs  summary.rs  tbs.rs  tests.rs  vault.rs  verify.rs
crates/tessera_issuer/tests/: file_sign.rs  pkcs11_sign.rs  vault_sign.rs
crates/tessera_issuer_wasm/: Cargo.toml
crates/tessera_issuer_wasm/src/: api.rs  error.rs  lib.rs  types.rs
crates/tessera_proto/: Cargo.toml
crates/tessera_proto/src/: client.rs  framing.rs  lib.rs  server.rs  session_target.rs  system_time_serde.rs  version.rs  wire.rs
crates/tessera_proto/tests/: client_message.rs  server_message.rs  session_target.rs  v2_messages.rs  wire.rs
crates/tessera_test_plugin/: Cargo.toml
crates/tessera_test_plugin/src/: lib.rs
(+386 files in other folders)
