[workspace]
resolver = "2"
members = [
    "crates/tessera_core",
    "crates/tessera_proto",
    "crates/pam_tessera",
    "crates/tessera_cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.95"
# Dual-licensed: AGPL-3.0-only OR commercial (LICENSE.commercial).
license = "AGPL-3.0-only"
repository = "https://github.com/TesseraLabs/tessera"
authors = ["Mikhail Korolev <mikhail@robonet.me>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "1"
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-journald = "0.3"
syslog = "7"
regex = "1.10"
sha2 = "0.11"
openssl = "0.10"
rand = "0.10"
hex = "0.4"
secrecy = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rustix = { version = "0.38", features = ["fs", "mount", "process", "stdio"] }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tempfile = "3.10"
proptest = "1.4"
mockall = "0.14"
pam-sys = "1.0.0-alpha5"
subtle = "2.5"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31", features = ["user", "signal", "process", "fs", "resource", "mount", "poll"] }
libc = "0.2"
udev = "0.9"
cryptoki = "0.12"
parking_lot = "0.12"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
sd-notify = "0.5"
futures-util = "0.3"
once_cell = "1"
unicode-normalization = "0.1"
wildmatch = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
