[workspace]
resolver = "2"
members = [
    "crates/tessera_core",
    "crates/tessera_ext",
    "crates/tessera_issuer",
    "crates/tessera_proto",
    "crates/pam_tessera",
    "crates/tessera_cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.95"
# Dual-licensed: AGPL-3.0-only OR commercial (LICENSE.commercial).
license = "AGPL-3.0-only"
repository = "https://github.com/TesseraLabs/tessera"
authors = ["Mikhail Korolev <mikhail@robonet.me>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "1"
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-journald = "0.3"
syslog = "7"
regex = "1.10"
sha2 = "0.11"
openssl = "0.10"
rand = "0.10"
hex = "0.4"
secrecy = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rustix = { version = "0.38", features = ["fs", "mount", "process", "stdio"] }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tempfile = "3.10"
proptest = "1.4"
mockall = "0.14"
pam-sys = "1.0.0-alpha5"
subtle = "2.5"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.31", features = ["user", "signal", "process", "fs", "resource", "mount", "poll"] }
libc = "0.2"
udev = "0.9"
cryptoki = "0.12"
parking_lot = "0.12"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
sd-notify = "0.5"
futures-util = "0.3"
once_cell = "1"
unicode-normalization = "0.1"
wildmatch = "2"
# Pure-Rust X.509/DER stack for the issuer tooling (wasm-compatible, no OpenSSL).
der = { version = "0.7", features = ["alloc", "oid"] }
spki = { version = "0.7", features = ["alloc"] }
const-oid = "0.9"
x509-cert = { version = "0.2", default-features = false }
p256 = "0.13"
# Pure-Rust RSA (MIT OR Apache-2.0), verification-only in the issuer: checks a
# CSR's PKCS#1 v1.5 / SHA-256 self-signature (proof of possession). No key
# generation or signing, so no RNG is pulled into the wasm core.
rsa = { version = "0.9", default-features = false, features = ["std"] }
# Native-only signing adapters for the issuer tooling (behind feature flags).
# tiny_http backs the local `issuer serve` agent; ureq drives Vault Transit
# signing; base64 (de)serialises DER on the JSON boundaries.
tiny_http = "0.12"
# native-tls (OS TLS: Security.framework / SChannel / system OpenSSL), no bundled
# Mozilla roots: trust comes from the host certificate store or an
# operator-supplied CA bundle. This keeps both `webpki-roots` and
# `webpki-root-certs` out of the tree and makes a private-CA Vault the default.
ureq = { version = "3", default-features = false, features = [
    "native-tls-no-default",
    "gzip",
    "json",
] }
base64 = "0.22"
# Browser entropy backend for the wasm issuer core: the RustCrypto stack
# (p256/rsa) pulls `getrandom`, which needs the `js` feature on
# `wasm32-unknown-unknown`. Native targets never use this.
getrandom = "0.2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
