[package]
name = "tessera_ext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust definitions of the Tessera custom X.509 extensions, shared by the Engine and the issuer tooling."

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror = { workspace = true }

[lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unused_must_use = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
transmute_ptr_to_ptr = "warn"
ptr_as_ptr = "warn"
cast_ptr_alignment = "warn"
ref_as_ptr = "warn"
exit = "warn"
