[package]
name = "tessera_issuer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Certificate-issuance core for Tessera: builds TBS with the project's custom X.509 extensions, enforces delegation-envelope monotonicity before signing, and self-verifies against the Engine's shared parsers."

[lib]
crate-type = ["rlib"]

[[bin]]
name = "issuer"
path = "src/bin/issuer.rs"
required-features = ["cli"]

[features]
# The native profile: OS-entropy serial generation and the CLI binary. Off for
# the `wasm32-unknown-unknown` core build, where entropy comes from the browser
# host and the binary is not built.
default = ["native"]
native = ["dep:rand"]
cli = ["native", "dep:clap"]
# Exposes the deterministic in-crate signer so integration tests (and, later,
# the CLI's dry-run mode) can assemble artifacts without a real key store.
test-support = []
# PKCS#11 signing adapter (token/HSM). Native-only: not built for the wasm core.
pkcs11 = ["native", "dep:cryptoki", "dep:secrecy", "dep:zeroize"]
# Vault/OpenBao Transit signing adapter. Native-only. serde/serde_json/base64/
# sha2 are core dependencies (the journal and CSR paths need them), so this
# feature only adds the HTTP transport and secret handling.
vault = [
    "native",
    "dep:ureq",
    "dep:secrecy",
    "dep:zeroize",
]
# On-disk PKCS#8 CA key signing adapter. Native-only. p256/rsa/sha2 are core
# dependencies (CSR verification); this feature adds p384 (P-384 signing) and
# direct pkcs8 access (PrivateKeyInfo parsing + EncryptedPrivateKeyInfo/PBES2
# decryption), plus the secret-handling crates.
file = [
    "native",
    "dep:p384",
    "dep:pkcs8",
    "dep:secrecy",
    "dep:zeroize",
]
# The browser-bridging local signing agent `issuer serve`. Native-only; the
# `issuer` binary drives it, hence `cli`.
serve = [
    "cli",
    "dep:tiny_http",
    "dep:subtle",
    "dep:secrecy",
    "dep:zeroize",
]
# Integration-test gates, mirroring tessera_core's `pkcs11-tests`: the heavy
# tests compile only with these on and still skip gracefully (print `skipped:`
# and return Ok) when the external dependency — a SoftHSM module, the `vault`
# binary — is absent at runtime.
pkcs11-tests = ["pkcs11"]
vault-tests = ["vault"]

[dependencies]
tessera_ext = { path = "../tessera_ext", version = "0.4.0" }
der = { workspace = true }
spki = { workspace = true }
const-oid = { workspace = true }
x509-cert = { workspace = true }
thiserror = { workspace = true }
# Core (wasm-compatible) dependencies. p256/rsa verify a CSR's self-signature;
# sha2 chains the issuance journal and hashes CSR contents; serde/serde_json
# render and parse the NDJSON journal; base64 encodes head signatures.
p256 = { workspace = true }
p384 = { workspace = true, optional = true }
pkcs8 = { workspace = true, optional = true }
rsa = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
cryptoki = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
tiny_http = { workspace = true, optional = true }

# The wasm core (browser cabinet) needs an entropy backend for the RustCrypto
# stack pulled by CSR verification; the browser provides one via getrandom's
# `js` feature. Never compiled for native targets.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
p256 = { workspace = true, features = ["pem"] }
# The file-backend tests write key fixtures to disk with restricted permissions;
# tempfile gives a self-cleaning path. Native-only test aid.
tempfile = { workspace = true }

[lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unused_must_use = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
transmute_ptr_to_ptr = "warn"
ptr_as_ptr = "warn"
cast_ptr_alignment = "warn"
ref_as_ptr = "warn"
exit = "warn"
