[package]
name = "tessera_issuer_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for the Tessera issuance core: pure JSON-in/JSON-out functions that build and self-check TBS/certificates in the browser cabinet, with signing delegated to the local agent over HTTP by the JS layer."

# `cdylib` is the WASM artifact wasm-bindgen post-processes; `rlib` lets the
# native unit tests (which exercise the pure mapping logic) link the crate.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The issuance core, built without its `native` default (no OS entropy, no CLI,
# no signing adapters): the cabinet builds and self-checks bytes only, and
# signing happens in the local agent the JS layer talks to.
tessera_issuer = { path = "../tessera_issuer", version = "0.4.0", default-features = false }
tessera_ext = { path = "../tessera_ext", version = "0.4.0" }
der = { workspace = true }
# Decodes the parent's `subject`/`issuer` `Name` for display and the self-signed
# root check; the wide custom extension OIDs are handled by tessera_ext, not here.
x509-cert = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
wasm-bindgen = { workspace = true }

# The RustCrypto stack the core pulls for CSR verification needs a `getrandom`
# backend on `wasm32-unknown-unknown`; the browser provides one via the `js`
# feature. Never compiled for native targets (where the native tests run).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
# The native tests build real fixtures with the core's test scaffolding
# (self-signed roots, a mock signer) and sign a genuine P-256 CSR to exercise the
# CSR path. `test-support` stays a dev-only feature, so it never ships in the
# WASM artifact.
tessera_issuer = { path = "../tessera_issuer", version = "0.4.0", default-features = false, features = [
    "test-support",
] }
p256 = { workspace = true, features = ["pem"] }

[lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unused_must_use = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
panic_in_result_fn = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
indexing_slicing = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
transmute_ptr_to_ptr = "warn"
ptr_as_ptr = "warn"
cast_ptr_alignment = "warn"
ref_as_ptr = "warn"
exit = "warn"
