[package]
name = "tessera_proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire-protocol types shared between libpam_tessera.so and tessera."

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Футган-ловушки (порт unsafe-hardening пака из ветки 2026-05-14).
mem_forget = "deny"
panic_in_result_fn = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
indexing_slicing = "deny"
